Merge branch 'master' of git://github.com/apache/storm into apache-master
# Conflicts:
#	storm-client/src/jvm/org/apache/storm/utils/NimbusClient.java