@@ -1,23 +1,16 @@
 /**
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.  The ASF licenses this file to you under the Apache License, Version
+ * 2.0 (the "License"); you may not use this file except in compliance with the License.  You may obtain a copy of the License at
  * <p>
  * http://www.apache.org/licenses/LICENSE-2.0
  * <p>
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions
+ * and limitations under the License.
  */
-package org.apache.storm.sql;
 
-import static org.apache.storm.sql.TestUtils.MockState.getCollectedValues;
+package org.apache.storm.sql;
 
 import java.net.URI;
 import java.util.ArrayList;
@@ -33,13 +26,15 @@ import org.apache.storm.sql.javac.CompilingClassLoader;
 import org.apache.storm.sql.runtime.DataSourcesProvider;
 import org.apache.storm.sql.runtime.DataSourcesRegistry;
 import org.apache.storm.sql.runtime.FieldInfo;
-import org.apache.storm.sql.runtime.ISqlTridentDataSource;
+import org.apache.storm.sql.runtime.ISqlStreamsDataSource;
+import org.apache.storm.streams.Pair;
 import org.apache.storm.tuple.Values;
 import org.junit.AfterClass;
 import org.junit.Assert;
-import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.ExternalResource;
 
 public class TestStormSql {
 
@@ -47,70 +42,11 @@ public class TestStormSql {
     public static final int WAIT_TIMEOUT_MS_NO_RECORDS_EXPECTED = 1000 * 10;
     public static final int WAIT_TIMEOUT_MS_ERROR_EXPECTED = 1000;
 
-    private static class MockDataSourceProvider implements DataSourcesProvider {
-        @Override
-        public String scheme() {
-            return "mock";
-        }
+    @Rule
+    public ExternalResource mockBoltValues = TestUtils.mockBoltValueResource;
 
-        @Override
-        public ISqlTridentDataSource constructTrident(URI uri, String inputFormatClass, String outputFormatClass,
-                                                      Properties properties, List<FieldInfo> fields) {
-            return new TestUtils.MockSqlExprDataSource();
-        }
-    }
-
-    private static class MockNestedDataSourceProvider implements DataSourcesProvider {
-        @Override
-        public String scheme() {
-            return "mocknested";
-        }
-
-        @Override
-        public ISqlTridentDataSource constructTrident(URI uri, String inputFormatClass, String outputFormatClass,
-                                                      Properties properties, List<FieldInfo> fields) {
-            return new TestUtils.MockSqlTridentNestedDataSource();
-        }
-    }
-
-    private static class MockGroupDataSourceProvider implements DataSourcesProvider {
-        @Override
-        public String scheme() {
-            return "mockgroup";
-        }
-
-        @Override
-        public ISqlTridentDataSource constructTrident(URI uri, String inputFormatClass, String outputFormatClass,
-                                                      Properties properties, List<FieldInfo> fields) {
-            return new TestUtils.MockSqlTridentGroupedDataSource();
-        }
-    }
-
-    private static class MockEmpDataSourceProvider implements DataSourcesProvider {
-        @Override
-        public String scheme() {
-            return "mockemp";
-        }
-
-        @Override
-        public ISqlTridentDataSource constructTrident(URI uri, String inputFormatClass, String outputFormatClass,
-                                                      Properties properties, List<FieldInfo> fields) {
-            return new TestUtils.MockSqlTridentJoinDataSourceEmp();
-        }
-    }
-
-    private static class MockDeptDataSourceProvider implements DataSourcesProvider {
-        @Override
-        public String scheme() {
-            return "mockdept";
-        }
-
-        @Override
-        public ISqlTridentDataSource constructTrident(URI uri, String inputFormatClass, String outputFormatClass,
-                                                      Properties properties, List<FieldInfo> fields) {
-            return new TestUtils.MockSqlTridentJoinDataSourceDept();
-        }
-    }
+    @Rule
+    public ExternalResource mockInsertBoltValues = TestUtils.mockInsertBoltValueResource;
 
     private static LocalCluster cluster;
 
@@ -139,43 +75,39 @@ public class TestStormSql {
         }
     }
 
-    @Before
-    public void setUp() {
-        getCollectedValues().clear();
-    }
-
     @Test
     public void testExternalDataSource() throws Exception {
         List<String> stmt = new ArrayList<>();
-        stmt.add("CREATE EXTERNAL TABLE FOO (ID INT) LOCATION 'mock:///foo'");
-        stmt.add("CREATE EXTERNAL TABLE BAR (ID INT) LOCATION 'mock:///foo'");
+        stmt.add("CREATE EXTERNAL TABLE FOO (ID INT PRIMARY KEY) LOCATION 'mock:///foo'");
+        stmt.add("CREATE EXTERNAL TABLE BAR (ID INT PRIMARY KEY) LOCATION 'mock:///foo'");
         stmt.add("INSERT INTO BAR SELECT STREAM ID + 1 FROM FOO WHERE ID > 2");
         StormSqlLocalClusterImpl impl = new StormSqlLocalClusterImpl();
 
-        List<List<Object>> values = getCollectedValues();
+        List<Pair<Object, Values>> values = TestUtils.MockInsertBolt.getCollectedValues();
         impl.runLocal(cluster, stmt, (__) -> values.size() >= 2, WAIT_TIMEOUT_MS);
 
         Assert.assertEquals(2, values.size());
-        Assert.assertEquals(4, values.get(0).get(0));
-        Assert.assertEquals(5, values.get(1).get(0));
+        Assert.assertEquals(4, values.get(0).getFirst());
+        Assert.assertEquals(5, values.get(1).getFirst());
     }
 
     @Test
     public void testExternalDataSourceNested() throws Exception {
         List<String> stmt = new ArrayList<>();
-        stmt.add("CREATE EXTERNAL TABLE FOO (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
-        stmt.add("CREATE EXTERNAL TABLE BAR (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
+        stmt.add("CREATE EXTERNAL TABLE FOO (ID INT PRIMARY KEY, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
+        stmt.add("CREATE EXTERNAL TABLE BAR (ID INT PRIMARY KEY, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("INSERT INTO BAR SELECT STREAM ID, MAPFIELD['c'], NESTEDMAPFIELD, ARRAYFIELD " +
-                "FROM FOO " +
-                "WHERE CAST(MAPFIELD['b'] AS INTEGER) = 2 AND CAST(ARRAYFIELD[2] AS INTEGER) = 200");
+                 "FROM FOO " +
+                 "WHERE CAST(MAPFIELD['b'] AS INTEGER) = 2 AND CAST(ARRAYFIELD[2] AS INTEGER) = 200");
         StormSqlLocalClusterImpl impl = new StormSqlLocalClusterImpl();
 
-        List<List<Object>> values = getCollectedValues();
+        List<Pair<Object, Values>> values = TestUtils.MockInsertBolt.getCollectedValues();;
         impl.runLocal(cluster, stmt, (__) -> values.size() >= 1, WAIT_TIMEOUT_MS);
 
         Map<String, Integer> map = ImmutableMap.of("b", 2, "c", 4);
         Map<String, Map<String, Integer>> nestedMap = ImmutableMap.of("a", map);
-        Assert.assertEquals(new Values(2, 4, nestedMap, Arrays.asList(100, 200, 300)), values.get(0));
+        Assert.assertEquals(2, values.get(0).getFirst());
+        Assert.assertEquals(new Values(2, 4, nestedMap, Arrays.asList(100, 200, 300)), values.get(0).getSecond());
     }
 
     @Test
@@ -185,11 +117,11 @@ public class TestStormSql {
         stmt.add("CREATE EXTERNAL TABLE FOO (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("CREATE EXTERNAL TABLE BAR (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("INSERT INTO BAR SELECT STREAM ID, MAPFIELD, NESTEDMAPFIELD, ARRAYFIELD " +
-                "FROM FOO " +
-                "WHERE CAST(MAPFIELD['a'] AS INTEGER) = 2");
+                 "FROM FOO " +
+                 "WHERE CAST(MAPFIELD['a'] AS INTEGER) = 2");
         StormSqlLocalClusterImpl impl = new StormSqlLocalClusterImpl();
 
-        List<List<Object>> values = getCollectedValues();
+        List<Pair<Object, Values>> values = TestUtils.MockInsertBolt.getCollectedValues();
         impl.runLocal(cluster, stmt, (__) -> true, WAIT_TIMEOUT_MS_NO_RECORDS_EXPECTED);
 
         Assert.assertEquals(0, values.size());
@@ -202,11 +134,11 @@ public class TestStormSql {
         stmt.add("CREATE EXTERNAL TABLE FOO (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("CREATE EXTERNAL TABLE BAR (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("INSERT INTO BAR SELECT STREAM ID, MAPFIELD, NESTEDMAPFIELD, ARRAYFIELD " +
-                "FROM FOO " +
-                "WHERE CAST(NESTEDMAPFIELD['b']['c'] AS INTEGER) = 4");
+                 "FROM FOO " +
+                 "WHERE CAST(NESTEDMAPFIELD['b']['c'] AS INTEGER) = 4");
         StormSqlLocalClusterImpl impl = new StormSqlLocalClusterImpl();
 
-        List<List<Object>> values = getCollectedValues();
+        List<Pair<Object, Values>> values = TestUtils.MockInsertBolt.getCollectedValues();
         impl.runLocal(cluster, stmt, (__) -> true, WAIT_TIMEOUT_MS_NO_RECORDS_EXPECTED);
 
         Assert.assertEquals(0, values.size());
@@ -218,11 +150,11 @@ public class TestStormSql {
         stmt.add("CREATE EXTERNAL TABLE FOO (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("CREATE EXTERNAL TABLE BAR (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("INSERT INTO BAR SELECT STREAM ID, MAPFIELD, NESTEDMAPFIELD, ARRAYFIELD " +
-                "FROM FOO " +
-                "WHERE CAST(ARRAYFIELD['a'] AS INTEGER) = 200");
+                 "FROM FOO " +
+                 "WHERE CAST(ARRAYFIELD['a'] AS INTEGER) = 200");
         StormSqlLocalClusterImpl impl = new StormSqlLocalClusterImpl();
 
-        List<List<Object>> values = getCollectedValues();
+        List<Pair<Object, Values>> values = TestUtils.MockInsertBolt.getCollectedValues();
         impl.runLocal(cluster, stmt, (__) -> true, WAIT_TIMEOUT_MS_NO_RECORDS_EXPECTED);
 
         Assert.assertEquals(0, values.size());
@@ -234,11 +166,11 @@ public class TestStormSql {
         stmt.add("CREATE EXTERNAL TABLE FOO (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("CREATE EXTERNAL TABLE BAR (ID INT, MAPFIELD ANY, NESTEDMAPFIELD ANY, ARRAYFIELD ANY) LOCATION 'mocknested:///foo'");
         stmt.add("INSERT INTO BAR SELECT STREAM ID, MAPFIELD, NESTEDMAPFIELD, ARRAYFIELD " +
-                "FROM FOO " +
-                "WHERE CAST(ARRAYFIELD[10] AS INTEGER) = 200");
+                 "FROM FOO " +
+                 "WHERE CAST(ARRAYFIELD[10] AS INTEGER) = 200");
         StormSqlLocalClusterImpl impl = new StormSqlLocalClusterImpl();
 
-        List<List<Object>> values = getCollectedValues();
+        List<Pair<Object, Values>> values = TestUtils.MockInsertBolt.getCollectedValues();
         impl.runLocal(cluster, stmt, (__) -> true, WAIT_TIMEOUT_MS_NO_RECORDS_EXPECTED);
 
         Assert.assertEquals(0, values.size());
@@ -276,25 +208,25 @@ public class TestStormSql {
     @Test
     public void testExternalUdf() throws Exception {
         List<String> stmt = new ArrayList<>();
-        stmt.add("CREATE EXTERNAL TABLE FOO (ID INT) LOCATION 'mock:///foo'");
-        stmt.add("CREATE EXTERNAL TABLE BAR (ID INT) LOCATION 'mock:///foo'");
+        stmt.add("CREATE EXTERNAL TABLE FOO (ID INT PRIMARY KEY) LOCATION 'mock:///foo'");
+        stmt.add("CREATE EXTERNAL TABLE BAR (ID INT PRIMARY KEY) LOCATION 'mock:///foo'");
         stmt.add("CREATE FUNCTION MYPLUS AS 'org.apache.storm.sql.TestUtils$MyPlus'");
         stmt.add("INSERT INTO BAR SELECT STREAM MYPLUS(ID, 1) FROM FOO WHERE ID > 2");
         StormSqlLocalClusterImpl impl = new StormSqlLocalClusterImpl();
 
-        List<List<Object>> values = getCollectedValues();
+        List<Pair<Object, Values>> values = TestUtils.MockInsertBolt.getCollectedValues();
         impl.runLocal(cluster, stmt, (__) -> values.size() >= 2, WAIT_TIMEOUT_MS);
 
         Assert.assertEquals(2, values.size());
-        Assert.assertEquals(4, values.get(0).get(0));
-        Assert.assertEquals(5, values.get(1).get(0));
+        Assert.assertEquals(4, values.get(0).getFirst());
+        Assert.assertEquals(5, values.get(1).getFirst());
     }
 
     @Test(expected = UnsupportedOperationException.class)
     public void testExternalUdfUsingJar() throws Exception {
         List<String> stmt = new ArrayList<>();
-        stmt.add("CREATE EXTERNAL TABLE FOO (ID INT) LOCATION 'mock:///foo'");
-        stmt.add("CREATE EXTERNAL TABLE BAR (ID INT) LOCATION 'mock:///foo'");
+        stmt.add("CREATE EXTERNAL TABLE FOO (ID INT PRIMARY KEY) LOCATION 'mock:///foo'");
+        stmt.add("CREATE EXTERNAL TABLE BAR (ID INT PRIMARY KEY) LOCATION 'mock:///foo'");
         stmt.add("CREATE FUNCTION MYPLUS AS 'org.apache.storm.sql.TestUtils$MyPlus' USING JAR 'foo'");
         stmt.add("INSERT INTO BAR SELECT STREAM MYPLUS(ID, 1) FROM FOO WHERE ID > 2");
         StormSqlLocalClusterImpl impl = new StormSqlLocalClusterImpl();
@@ -302,5 +234,70 @@ public class TestStormSql {
         impl.runLocal(cluster, stmt, (__) -> true, WAIT_TIMEOUT_MS_ERROR_EXPECTED);
 
         Assert.fail("Should raise UnsupportedOperationException.");
+    }
+
+    private static class MockDataSourceProvider implements DataSourcesProvider {
+        @Override
+        public String scheme() {
+            return "mock";
+        }
+
+        @Override
+        public ISqlStreamsDataSource constructStreams(URI uri, String inputFormatClass, String outputFormatClass,
+                                                      Properties properties, List<FieldInfo> fields) {
+            return new TestUtils.MockSqlStreamsInsertDataSource();
+        }
+    }
+
+    private static class MockNestedDataSourceProvider implements DataSourcesProvider {
+        @Override
+        public String scheme() {
+            return "mocknested";
+        }
+
+        @Override
+        public ISqlStreamsDataSource constructStreams(URI uri, String inputFormatClass, String outputFormatClass,
+                                                      Properties properties, List<FieldInfo> fields) {
+            return new TestUtils.MockSqlStreamsInsertNestedDataSource();
+        }
+    }
+
+    private static class MockGroupDataSourceProvider implements DataSourcesProvider {
+        @Override
+        public String scheme() {
+            return "mockgroup";
+        }
+
+        @Override
+        public ISqlStreamsDataSource constructStreams(URI uri, String inputFormatClass, String outputFormatClass,
+                                                      Properties properties, List<FieldInfo> fields) {
+            return new TestUtils.MockSqlStreamsInsertGroupedDataSource();
+        }
+    }
+
+    private static class MockEmpDataSourceProvider implements DataSourcesProvider {
+        @Override
+        public String scheme() {
+            return "mockemp";
+        }
+
+        @Override
+        public ISqlStreamsDataSource constructStreams(URI uri, String inputFormatClass, String outputFormatClass,
+                                                      Properties properties, List<FieldInfo> fields) {
+            return new TestUtils.MockSqlStreamsInsertJoinDataSourceEmp();
+        }
+    }
+
+    private static class MockDeptDataSourceProvider implements DataSourcesProvider {
+        @Override
+        public String scheme() {
+            return "mockdept";
+        }
+
+        @Override
+        public ISqlStreamsDataSource constructStreams(URI uri, String inputFormatClass, String outputFormatClass,
+                                                      Properties properties, List<FieldInfo> fields) {
+            return new TestUtils.MockSqlStreamsInsertJoinDataSourceDept();
+        }
     }
 }
